# ciirc-avm

./: .gitignore  README.md  main.py  pyproject.toml
slicer/: scaling.py
